syntax = "proto3";

option go_package = "github.com/piotrstrzalka/kvcache/pkg/model";

service KvCache {
    rpc Set (SetRequest) returns (SetReply) {}
    rpc SetWithExpiry (SetRequest) returns (SetReply) {}
    rpc Get (GetRequest) returns (GetResponse) {}
}

message SetRequest {
    string key = 1;
    int64 expiry_time = 2;
    bytes value = 3;
}

message SetReply {
    bool result = 1;
}

message GetRequest {
    string key = 1;
}

message GetResponse {
    string key = 1;
    bytes value = 2;
}